randomにも手を出しました

--- a/mywork/program/中間発表用/create_rossler_data.ipynb
+++ b/mywork/program/中間発表用/create_rossler_data.ipynb
@@ -143,7 +143,7 @@
    "source": [
     "for shift_hour in shift_hours:\n",
     "    # 新しいディレクトリを作成\n",
-    "    dir_name = f\"rossler_data_with_shifted_force_{shift_hour}\"\n",
+    "    dir_name = f\"data\"\n",
     "    os.makedirs(dir_name, exist_ok=True)\n",
     "    \n",
     "    # 微分方程式の数値解を求める\n",
