--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -7,11 +7,13 @@
 \usepackage{ascmac, array}
 
 % Beamerテーマとカラーテーマ
-\usetheme{Luebeck}
+\usetheme{Malmoe}
 \usecolortheme[RGB={4, 56, 76}]{structure}
 \usefonttheme{professionalfonts}
 \useinnertheme{circles}
 \useoutertheme{infolines}
+\setbeamertemplate{headline}{} % ヘッダーの内容を空にする
+
 
 % ナビゲーションシンボルを非表示に
 \setbeamertemplate{navigation symbols}{}
@@ -50,8 +52,8 @@
 % タイトル情報
 \title[]{Reservoir Computerによる外力付きカオス時系列モデルの予測と生体リズム研究への応用}
 \subtitle{}
-\author[Talker: Sho Kuno]{発表者：久野証}
-\institute[計数工学科数理情報工学コース]{東京大学工学部計数工学科数理情報工学コース 4年}
+\author[]{発表者：久野証}
+\institute[]{東京大学工学部計数工学科数理情報工学コース 4年}
 \date{\today}
 
 % ドキュメントの開始
