--- a/slides/input/motivation.tex
+++ b/slides/input/motivation.tex
@@ -1,22 +1,6 @@
 \section{背景}
 
-\begin{frame}{背景}
-    
-    \begin{itemize}
-        \item 現実の問題は非線形で，高次元・複雑→完全な数理モデルを作ることは難しい．
-        \item 非線形力学システムの未来予測は一般に困難
-        \begin{itemize}
-            \item 特にカオスの場合は初期値鋭敏性により，（外部からの干渉も影響し）不完全な数理モデルでは予測に用いにくい．
-        \end{itemize}
-        \item Reservoir Computer を用いて高い精度の予測が可能
-        \begin{block}{Reservoir Computer}
-            内部にランダムニューラルネットワーク（Reservoir）を持つRecurrent Neural Networkの手法．Backpropagationが不必要・出力層のみの学習で計算効率が良い． 
-        \end{block}    
-    \end{itemize}      
-\end{frame}
-
-\section{目的}
-\begin{frame}{目的}
+\begin{frame}{LD Cycleによる生体リズムの研究}
     \begin{minipage}{0.49\linewidth}
         時差ぼけの研究：
         \begin{itemize}
@@ -39,4 +23,17 @@
     \end{minipage}
 \end{frame}
 
-
+\begin{frame}{レザバーを用いたカオス時系列の未来予測}
+    
+    \begin{itemize}
+        \item 現実の問題は非線形で，高次元・複雑→完全な数理モデルを作ることは難しい．
+        \item 非線形力学システムの未来予測は一般に困難
+        \begin{itemize}
+            \item 特にカオスの場合は初期値鋭敏性により，（外部からの干渉も影響し）不完全な数理モデルでは予測に用いにくい．
+        \end{itemize}
+        \item Reservoir Computer を用いて高い精度の予測が可能
+        \begin{block}{Reservoir Computer}
+            内部にランダムニューラルネットワーク（Reservoir）を持つRecurrent Neural Networkの手法．Backpropagationが不必要・出力層のみの学習で計算効率が良い． 
+        \end{block}    
+    \end{itemize}      
+\end{frame}
