--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -7,7 +7,7 @@
 \usepackage{ascmac, array}
 
 % Beamerテーマとカラーテーマ
-\usetheme{Malmoe}
+\usetheme{Berlin}
 \usecolortheme[RGB={4, 56, 76}]{structure}
 \usefonttheme{professionalfonts}
 \useinnertheme{circles}
@@ -55,6 +55,7 @@
 \author[]{発表者：久野証}
 \institute[]{東京大学工学部計数工学科数理情報工学コース 4年}
 \date{\today}
+\setbeamertemplate{bibliography item}{\insertbiblabel}
 
 % ドキュメントの開始
 \begin{document}
