データ揃った

--- a/slides/input/experiments.tex
+++ b/slides/input/experiments.tex
@@ -1,7 +1,5 @@
-\section{これまでの結果}
-
-
 \begin{frame}{周期外力のあるRösslerモデル (1/2)}
+    \vspace{-.35cm}
     % スライドを2つの列に分割
     \begin{columns}[T] % [T] は列を上部で揃えるオプション
   
@@ -20,14 +18,18 @@
         \end{block}
       \end{column}
       \begin{column}{.5\textwidth}
-        \includegraphics[width=0.9\textwidth]{Fig/NEWrossler_attractor.png}
+        \vspace{-.6cm}
+        \begin{figure}
+            \includegraphics[width=0.9\textwidth]{Fig/NEWrossler_attractor.png}
+            \caption{\scriptsize{Rösslerモデル}}
+        \end{figure}
+        
       \end{column}
     \end{columns}
   \end{frame}
 
 \begin{frame}{周期外力のあるRösslerモデル (2/2)}
     \begin{columns}[T] % [T] は列を上部で揃えるオプション
-  
         \begin{column}{.5\textwidth}
             \begin{itemize}
                 \item Hyperparameter の最適化は位相シフトが$8$時間である系に対して行う．
@@ -35,9 +37,11 @@
                     \item 未知の外力に対するReservoir の予測性能を測る．
                 \end{itemize}
             \end{itemize}
+            
+            \vspace{-.5em}
             \begin{figure}
                 %\centering % 画像を中央揃えにする（オプション）
-                \includegraphics[width=0.9\textwidth]{Fig/phase_shift_plot.png}
+                \includegraphics[width=0.8\textwidth]{Fig/phase_shift_plot.png}
                 \caption{\scriptsize{$4$ 日に一度 $8$ 時間早めたときの外力の位相}}
             \end{figure}
         \end{column}
@@ -55,3 +59,12 @@
 \end{frame}
 
 
+\section{結果}
+\begin{frame}
+    
+\end{frame}
+
+\section{まとめと展望}
+\begin{frame}
+    
+\end{frame}
