--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -2,7 +2,7 @@
 % 余分なオプションを削除しました。aspectratioはそのままで大丈夫です。
 
 % 必要なパッケージを読み込みます
-\usepackage{amsmath, amssymb, bm, mathtools, multicol, tcolorbox, subfig, physics, ulem}
+\usepackage{amsmath, amssymb, bm, mathtools, multicol, tcolorbox, subfig, physics, ulem, url}
 \usepackage{here} % 'here' パッケージは推奨されていない場合があるので注意
 \usepackage{ascmac, array}
 
@@ -12,8 +12,9 @@
 \usefonttheme{professionalfonts}
 \useinnertheme{circles}
 \useoutertheme{infolines}
-\setbeamertemplate{headline}{} % ヘッダーの内容を空にする
 
+
+\setbeamertemplate{bibliography item}[text]
 
 % ナビゲーションシンボルを非表示に
 \setbeamertemplate{navigation symbols}{}
@@ -47,15 +48,12 @@
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\C}{\mathbb{C}} 
 
-\includeonly{input/experiments}
-
 % タイトル情報
 \title[]{Reservoir Computerによる外力付きカオス時系列モデルの予測と生体リズム研究への応用}
 \subtitle{}
 \author[]{発表者：久野証}
 \institute[]{東京大学工学部計数工学科数理情報工学コース 4年}
 \date{\today}
-\setbeamertemplate{bibliography item}{\insertbiblabel}
 
 % ドキュメントの開始
 \begin{document}
@@ -68,7 +66,6 @@
 
     \input{input/motivation.tex}
     \input{input/experiments.tex}
-    \input{input/theory.tex}
     \input{input/appendix.tex}
 
 \end{document}
