--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -52,7 +52,7 @@
 \title[]{Reservoir Computerによる外力付きカオス時系列モデルの予測と生体リズム研究への応用}
 \subtitle{}
 \author[]{発表者：久野証}
-\institute[]{東京大学工学部計数工学科数理情報工学コース 4年}
+\institute[]{所属：東京大学工学部計数工学科数理情報工学コース 4年\\学籍番号：03-210599}
 \date{\today}
 
 % ドキュメントの開始
